https://community.anytype.io/t/0-49-60-beta-settings-icon-in-the-widgets-sidebar-on-the-right-is-invisible-on-hover-when-using-dark-mode/28891/6: fix

--- a/src/scss/theme/dark/common.scss
+++ b/src/scss/theme/dark/common.scss
@@ -405,6 +405,12 @@ html.themeDark {
 					}
 				}
 			}
+
+			> .bottom {
+				.widgetSettings:not(.isEditing):hover {
+					.icon { background-image: url('#{$themePath}/icon/widget/button/widgetSettings1.svg'); }
+				}
+			}
 		}
 		
 		> .sidebarPage.pageAllObject {
